--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,10 @@
             <groupId>org.springframework.session</groupId>
             <artifactId>spring-session-jdbc</artifactId>
         </dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+		</dependency>
 
         <dependency>
             <groupId>org.hibernate.validator</groupId>
